# audio2vtt

./: .gitignore  Dockerfile  Dockerfile-cpu  Dockerfile-gpu  LICENSE  README.md  config.py  docker-compose-cpu.yml  docker-compose-gpu.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  whisper_utils.py
.github/workflows/: publish.yml  test.yml
.runpod/: hub.json  tests.json
models/: you.srt  you.vtt
src/: __init__.py  audio_subtitler.py  audio_to_vtt.py  cli.py  config.py  download_model.py  main.py  queue_manager.py  rp_handler.py  runpod_handler.py  whisper_utils.py
tests/: test_audio_subtitler.py  test_audio_to_vtt.py  test_cli.py
