[project]
name = "audio-subtitler"
dynamic = ["version"]
description = "Convert audio files to subtitles (VTT, SRT) using Faster-Whisper"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Gary Lab"},
]
keywords = ["audio", "transcription", "vtt", "srt", "subtitles", "whisper", "speech-to-text", "webvtt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "faster-whisper>=1.0.0",
]

[project.scripts]
audiosubtitler = "src.cli:main"
audiosub = "src.cli:main"

[project.optional-dependencies]
runpod = [
    "runpod>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/garylab/audio-subtitler"
"Author Blog" = "https://garymeng.com"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src"]
